--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,39 @@
-h1 {
-  color: red;
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body, html {
+  font-size: 16px;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .container, html .container {
+  border: 1px solid;
+  width: 90%;
+  max-width: 550px;
+  height: 70%;
+  max-height: 500px;
+  display: flex;
+  flex-direction: column;
+}
+body .container .title, html .container .title {
+  padding-block: 3%;
+}
+body .container .inputs, html .container .inputs {
+  width: 100%;
+  text-align: center;
+}
+body .container .informations, html .container .informations {
+  margin-top: 10%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border: 1px solid;
 }
 
 /*# sourceMappingURL=styles.css.map */
