--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,2 +1,37 @@
-h1
-    color: red
+*
+    padding: 0
+    margin: 0
+
+body, html 
+    font-size: 16px
+    width: 100vw
+    height: 100vh
+    display: flex
+    justify-content: center
+    align-items: center
+    // padding-inline: 20px
+    
+    .container
+        border: 1px solid
+        width: 90%
+        max-width: 550px
+        height: 70%
+        max-height: 500px
+        display: flex
+        flex-direction: column
+        
+        .title
+            padding-block:3%
+
+        .inputs 
+            width: 100%
+            text-align: center
+
+
+        .informations
+            margin-top: 10%
+            height: 50%
+            display: flex
+            flex-direction: column
+            justify-content: space-evenly
+            border: 1px solid
