--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,6 +1,7 @@
 *
     padding: 0
     margin: 0
+    box-sizing: border-box
 
 body, html 
     font-size: 16px
@@ -10,28 +11,50 @@ body, html
     justify-content: center
     align-items: center
     // padding-inline: 20px
+    color: white
     
     .container
-        border: 1px solid
         width: 90%
         max-width: 550px
         height: 70%
         max-height: 500px
         display: flex
         flex-direction: column
+        background-color: lightblue
+        padding: 20px
+        border-radius: 20px
         
         .title
             padding-block:3%
+            text-align: center 
 
         .inputs 
             width: 100%
             text-align: center
 
+            .fieldSearch
+                width: 40%
+                min-width: 70px
+                height: 30px
+                outline: none
+                padding-left: 5px
+                border-radius: 5px
+                border: none
+
+                &:focus
+                    border: 1px solid gray
+
+            .buttonSubmit
+                width: 40px
+                height: 30px
+                cursor: pointer
+                background-color: white
+                border-radius: 5px
+                border: none
 
         .informations
-            margin-top: 10%
+            margin-top: 5%
             height: 50%
             display: flex
             flex-direction: column
             justify-content: space-evenly
-            border: 1px solid
