--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -58,3 +58,18 @@ body, html
             display: flex
             flex-direction: column
             justify-content: space-evenly
+
+            .dates
+                height: 40%
+
+                div
+                    margin-bottom: 20px
+                    display: flex
+                    justify-content: space-between
+                    align-items: center
+                    width: 25%
+
+                    span
+                        padding: 10px 30px 10px 0
+                        border-right: 2px solid
+                    
