--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -10,54 +10,69 @@ body, html
     display: flex
     justify-content: center
     align-items: center
-    // padding-inline: 20px
     color: white
-    
+    background: rgb(33,78,131)
+    background: linear-gradient(169deg, rgba(33,78,131,1) 0%, rgba(101,161,176,1) 48%, rgba(223,225,231,1) 100%)
+
     .container
-        width: 90%
+        width: 60%
         max-width: 550px
-        height: 70%
+        height: 40%
         max-height: 500px
         display: flex
         flex-direction: column
+        justify-content: space-evenly
         background-color: lightblue
         padding: 20px
         border-radius: 20px
+        box-sizing: content-box
         
-        .title
-            padding-block:3%
-            text-align: center 
-
-        .inputs 
-            width: 100%
-            text-align: center
-
-            .fieldSearch
-                width: 40%
-                min-width: 70px
-                height: 30px
-                outline: none
-                padding-left: 5px
-                border-radius: 5px
-                border: none
-
-                &:focus
-                    border: 1px solid gray
-
-            .buttonSubmit
-                width: 40px
-                height: 30px
-                cursor: pointer
-                background-color: white
-                border-radius: 5px
-                border: none
-
-        .informations
-            margin-top: 5%
-            height: 50%
+        .header
+            height: 30%
             display: flex
             flex-direction: column
             justify-content: space-evenly
+            
+            .title
+                text-align: center 
+
+            .inputs 
+                width: 100%
+                text-align: center
+
+                .fieldSearch
+                    width: 40%
+                    min-width: 70px
+                    height: 30px
+                    outline: none
+                    padding-left: 5px
+                    border-radius: 5px
+                    border: none
+
+                    &:focus
+                        border: 1px solid gray
+
+                .buttonSubmit
+                    width: 40px
+                    height: 30px
+                    cursor: pointer
+                    background-color: white
+                    border-radius: 5px
+                    border: none
+
+        .informations
+            height: 50%
+            display: none
+            flex-direction: column
+            justify-content: space-evenly
+
+            .containerCity 
+                display: flex
+                align-items: center
+                width: 50%
+
+                span
+                    font-size: 1.3rem
 
             .dates
                 height: 40%
@@ -67,9 +82,14 @@ body, html
                     display: flex
                     justify-content: space-between
                     align-items: center
-                    width: 25%
+                    width: max-content
 
-                    span
+                    .deg
                         padding: 10px 30px 10px 0
                         border-right: 2px solid
+                        font-size: 1.5rem
+                        margin-right: 20px
+
+                .weather
+                    font-size: 1.2rem
                     
